--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@supabase/supabase-js": "^2.21.0",
     "cron": "^3.1.3",
     "body-parser": "^1.20.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
